src/app/components/header/header.component.scss
/* ... */
// Extra small devices (portrait phones, less than 576px)
@include media-breakpoint-only(xs) {
  header {
    position: absolute !important;
    margin-top: 0 !important;
    .container {
      @include container-size(100%);
      overflow: hidden;
      padding: 5px 0;
      .menu-wrapper{
        width: 100%;
        padding: 5px 0;
        .logo {
          float: left;
          margin-left: 10px;
        }
        .chapters {
          display: inline-block;
          color: white;
          margin-left: 10px;
          float: left;
          i{
            font-size: 2.1em;
            margin-top: 5px;
            transition: transform 0.5s ease;
          }
        }
        .menu-bar{
          color: white;
          vertical-align: middle;
          top: 10px;
          position: absolute;
          right: 0;
          >div{
            display: inline-block;
            margin-right: 10px;
            vertical-align: middle;
          }
          /*.chapters{
            .icon{
              display: inline-block;
              width: 35px;
              height: 30px;
              overflow: hidden;
              position: relative;
              vertical-align: middle;
              img{
                position: absolute;
                width: 120px;
                margin-left: -13px;
              }
            }
          }*/
          .menu{
            font-size: $font-size-h4;
            span{
              vertical-align: middle;
            }
            i{
              font-size: $font-size-h4;
              vertical-align: middle;
            }
          }
        }
      }
      .menu-dropdown{
        width: 100%;
        background-color: white;
        overflow: hidden;
        .menu-items{
          display: block;
          background-color: white;
          padding: 0;
          .nav-item{
            overflow: hidden;
            line-height: 1.3em;
            border-top: 1px solid #ebebeb;
            .selected{
              background-color: #e7e7e7;
            }
            .item-wrapper{
              overflow: hidden;
              padding: 20px 5%;
              color: #575757;
              .label{
                display: inline-block;
                float: left;
                span{
                  font-weight: 500;
                  font-size: $font-size-default;
                  color: #505050 !important;
                }
              }
            }
            i{
              float: right;
              font-size: $font-size-default;
              margin-top: 5px;
              font-weight: 500;
            }
            .sub-menu{
              background-color: #fff;
              text-align: left;
              font-size: $font-size-default;
              color: #575757;
              >div{
                font-weight: 400;
                overflow: hidden;
                line-height: 1.3em;
                border-top: 1px solid #ebebeb;
              }
              .sub_item{
                overflow: hidden;
                padding: 20px 5% 20px 10%;
                color: #575757;
                display: block;
                background-color: #f7f7f7;

              }
              .inner_sub_item{
                overflow: hidden;
                padding: 20px 5% 20px 15%;
                color: #575757;
                display: block;
              }
            }
          }
        }
        .signin-btn, .language{
          color: gray;
          font-size: $font-size-default;
          text-align: left;
          padding: 15px 20px;
          background-color: #fff;
          font-weight: 400;
          text-decoration: none;
          color: #00406c;
        }
        .signin-btn {
          border-top: 1px solid #b0adad;
          padding-top: 25px;
        }
        .language {
          padding-bottom: 25px;
        }
        .signin-btn >a{
          text-decoration: none;
          font-size: 1.15em;
          font-weight: 400;
          color: #00406c;
        }
      }

      .chapters-items{
        display: block;
        background-color: white;
        padding: 10px 0;
        color: black;
        font-size: $font-size-h4;
        text-align: left;
        height: 350px;
        overflow-y: scroll;
        .nav-item{
          padding: 5px 10px;
          .logo{
            background-color: rgba(0,0,0,0.25);
            display: inline-block;
            vertical-align: middle;
            img{
              width: 40px;
              height: 40px;
              vertical-align: middle;
            }
          }
        }
        label{
          display: inline-block;
          width: 82%;
          vertical-align: middle;
          font-size: 0.9em;
        }
      }
    }
    .bigger-device{
      display: none !important;
    }
    .mobile{
      display: block;
    }
  }

  ::-webkit-scrollbar
  {
    width: 10px;  /* for vertical scrollbars */
    height: 10px; /* for horizontal scrollbars */
  }

  ::-webkit-scrollbar-track
  {
    background: rgba(84, 84, 84, 0.2);
  }

  ::-webkit-scrollbar-thumb
  {
    background: #b2b2b2;
    border-radius: 10px;
  }
}
/* ... */

